Client/src/index.css
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body,
html,
#root {
    height: 100%;
}

#root {
    display: flex;
    flex-direction: column;
}

main {
    flex: 1;
    /* takes remaining space */
}

